# gencrt

./: .pre-commit-config.yaml  README.md  pyproject.toml
src/gencrt/: generalized_crt.py
